--- a/app/styles/addon-overrides/_ember-flatpickr.scss
+++ b/app/styles/addon-overrides/_ember-flatpickr.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 $daySize: 35px;
-$padding: $daySize/16;
+$padding: calc($daySize / 16);
 $dayMargin: 2px;
 $daysWidth: ($daySize * 7) + ($dayMargin * 14) + ($padding * 2) + 2;
 $calendarWidth: $daysWidth;
