--- a/app/components/search/navigation.hbs
+++ b/app/components/search/navigation.hbs
@@ -1,4 +1,4 @@
-<div>
+<nav>
   <AuHeading @level="3" @skin="6" class="au-u-hidden-visually">
     {{t "content"}}
   </AuHeading>
@@ -17,12 +17,16 @@
       <AuNavigationLink @route="search.documents">
         {{t "document"}}
       </AuNavigationLink>
+    </li>
+    <li class="au-c-list-navigation__item">
       <AuNavigationLink @route="search.decisions">
         {{t "decisions"}}
       </AuNavigationLink>
+    </li>
+    <li class="au-c-list-navigation__item">
       <AuNavigationLink @route="search.news-items">
         {{t "newsletter"}}
       </AuNavigationLink>
     </li>
   </ul>
-</div>
+</nav>
