KAS-3845 replace forked dependency for numac tags by normal repo, fix styling

--- a/app/styles/addon-overrides/_ember-tag-input.scss
+++ b/app/styles/addon-overrides/_ember-tag-input.scss
@@ -24,6 +24,10 @@
     outline-offset: var(--au-outline-offset);
   }
 
+  > li {
+    display: inline-flex;
+  }
+
   @extend .auk-filter-pill-list;
 }
 
