feat: add category result counts at the bottom

--- a/app/components/search/navigation.hbs
+++ b/app/components/search/navigation.hbs
@@ -10,17 +10,17 @@
     </li>
     <li class="au-c-list-navigation__item">
       <AuNavigationLink @route="search.cases">
-        {{t "agendaitem-case"}}
+        {{t "cases"}}
       </AuNavigationLink>
     </li>
     <li class="au-c-list-navigation__item">
       <AuNavigationLink @route="search.agendaitems">
-        {{t "agenda"}}
+        {{t "agendas"}}
       </AuNavigationLink>
     </li>
     <li class="au-c-list-navigation__item">
       <AuNavigationLink @route="search.documents">
-        {{t "document"}}
+        {{t "documents"}}
       </AuNavigationLink>
       <AuNavigationLink @route="search.decisions">
         {{t "decisions"}}
