fix: change wording to multiple

--- a/app/templates/search/agendaitems.hbs
+++ b/app/templates/search/agendaitems.hbs
@@ -41,7 +41,7 @@
       @pageIdx={{this.page}}
       @nbOfItems={{this.model.length}}
       @searchText={{this.searchText}}
-      @searchType={{t "agenda"}}
+      @searchType={{t "agendas"}}
       @onSortChange={{this.selectSort}}
       @sortOptions={{this.sortOptions}}
       @sort={{this.sort}}
