--- a/app/templates/search/all-types.hbs
+++ b/app/templates/search/all-types.hbs
@@ -107,7 +107,7 @@
     {{#if (get this.model.counts "news-items")}}
       {{t "n-results-found-in" n=(get this.model.counts "news-items")}}
       <AuLink @route="search.news-items">
-        {{t "newsletter"}}
+        {{t "news-items"}}
       </AuLink>
     {{/if}}
   {{else}}
