--- a/app/templates/search/all-types.hbs
+++ b/app/templates/search/all-types.hbs
@@ -1,7 +1,7 @@
 {{page-title (t "all-content")}}
 <div class="au-o-box au-o-box--small">
   {{#if this.model.results}}
-    <ul>
+    <ul class="au-u-padding-bottom-small">
       {{#each-in this.model.counts as |name count|}}
         {{#if count}}
           <li>
