KAS-3845 fix cancelled task run in action error, fix tests not waiting properly

--- a/app/components/news-item/table-row.hbs
+++ b/app/components/news-item/table-row.hbs
@@ -49,7 +49,7 @@
         this.saveNewsItem.isRunning
         (not (user-may "manage-news-items"))
       }}
-      @onChange={{this.toggleInNewsletterFlag}}
+      @onChange={{perform this.toggleInNewsletterFlag}}
     />
   </td>
   <td class="lt-cell align-left">
