KAS-3942 Add or adjust margin properties on au-c-content & say-content children

--- a/app/styles/addon-overrides/_ember-rdfa-editor.scss
+++ b/app/styles/addon-overrides/_ember-rdfa-editor.scss
@@ -82,6 +82,15 @@ $say-editor-border-radius: $au-input-border-radius;
     @include au-font-size(1.8rem);
   }
 
+  > * + * {
+    margin-top: 1.5rem;
+  }
+
+  > p + ul,
+  > p + ol {
+    margin-top: 0;
+  }
+
   ul,
   ol {
     margin-left: 2.8rem;
