--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -153,7 +153,7 @@ $au-button-height: 3.4rem;
   }
 
   ul:not(.au-c-list-horizontal) li + li { // override list item spacing to match the one in Kaleidos a bit more
-    margin-top: 0.3rem;
+    margin-top: 0.1rem;
   }
 
   ul.au-c-list  li + li { // this styling needs to be reset again unfortunately
@@ -163,6 +163,11 @@ $au-button-height: 3.4rem;
   // override child (and heading) spacing to match the one in Kaleidos a bit more
   > * + * {
     margin-top: 1.5rem;
+  }
+
+  > p + ul,
+  > p + ol {
+    margin-top: 0.2rem;
   }
 
   > * + h1,
