KAS-3932 Fix weird cropping of long titles within search result cards + removed unnecessary options on sanitize-html

--- a/app/components/search/result-cards/agendaitem.hbs
+++ b/app/components/search/result-cards/agendaitem.hbs
@@ -25,10 +25,12 @@
 
         @models={{array @meetingId @agendaId @agendaItemId}}
       >
-        <SanitizeHtml
-          @raw={{true}}
-          @value={{if @shortTitle @shortTitle @title}}
-        />
+        <span>
+          <SanitizeHtml
+            @raw={{true}}
+            @value={{if @shortTitle @shortTitle @title}}
+          />
+        </span>
       </AuLink>
     </AuHeading>
   </c.header>
