--- a/app/components/search/result-cards/document.hbs
+++ b/app/components/search/result-cards/document.hbs
@@ -19,10 +19,12 @@
         @icon="document"
         @iconAlignment="left"
       >
-        <SanitizeHtml
-          @raw={{true}}
-          @value={{@title}}
-        />
+        <span>
+          <SanitizeHtml
+            @raw={{true}}
+            @value={{@title}}
+          />
+        </span>
       </AuLink>
     </AuHeading>
   </c.header>
@@ -39,10 +41,12 @@
           @route="agenda.agendaitems.agendaitem"
           @models={{array @meetingId @agendaId @agendaitemId}}
         >
-          <SanitizeHtml
-            @raw={{true}}
-            @value={{@agendaitemShortTitle}}
-          />
+          <span>
+            <SanitizeHtml
+              @raw={{true}}
+              @value={{@agendaitemShortTitle}}
+            />
+          </span>
         </AuLink>
       </p>
     {{else}}
