KAS-3932 Fix weird cropping of long titles within search result cards + removed unnecessary options on sanitize-html

--- a/app/components/search/result-cards/document.hbs
+++ b/app/components/search/result-cards/document.hbs
@@ -13,10 +13,12 @@
         @icon="document"
         @iconAlignment="left"
       >
-        <SanitizeHtml
-          @raw={{true}}
-          @value={{@fileName}}
-        />
+        <span>
+          <SanitizeHtml
+            @raw={{true}}
+            @value={{@fileName}}
+          />
+        </span>
       </AuLink>
     </AuHeading>
   </c.header>
@@ -33,10 +35,12 @@
           @route="agenda.agendaitems.agendaitem"
           @models={{array @meetingId @agendaId @agendaitemId}}
         >
-          <SanitizeHtml
-            @raw={{true}}
-            @value={{@agendaitemShortTitle}}
-          />
+          <span>
+            <SanitizeHtml
+              @raw={{true}}
+              @value={{@agendaitemShortTitle}}
+            />
+          </span>
         </AuLink>
       </p>
     {{/if}}
