fix: show the document title, not the filename in search results

--- a/app/components/search/result-cards/document.hbs
+++ b/app/components/search/result-cards/document.hbs
@@ -15,7 +15,7 @@
       >
         <SanitizeHtml
           @raw={{true}}
-          @value={{@fileName}}
+          @value={{@title}}
         />
       </AuLink>
     </AuHeading>
