KAS-3945 implement sorting and filterin on meetingDate, fallback to created if not on agenda

--- a/app/templates/search/documents.hbs
+++ b/app/templates/search/documents.hbs
@@ -38,6 +38,7 @@
       <:body as |row|>
         <td>
           <Search::ResultCards::Document
+            @date={{row.attributes.meetingDate}}
             @created={{row.attributes.created}}
             @documentId={{row.id}}
             @title={{if
