added selection of document-types in use, and expanded labeling options for RadioDropdownComboSelect

--- a/app/components/documents/uploaded-document.hbs
+++ b/app/components/documents/uploaded-document.hbs
@@ -21,6 +21,7 @@
           <Utils::RadioDropdownComboSelect
             @options={{this.sortedDocumentTypes}}
             @onSelect={{this.selectDocumentType}}
+            @dropdownLabelKey="altLabel"
             @selected={{this.selectedDocumentType}}
           />
         </div>
