obliged two small requests from the users

--- a/app/components/documents/uploaded-document.hbs
+++ b/app/components/documents/uploaded-document.hbs
@@ -22,6 +22,7 @@
             @options={{this.sortedDocumentTypes}}
             @onSelect={{this.selectDocumentType}}
             @dropdownLabelKey="altLabel"
+            @radioOptionsSize="6"
             @selected={{this.selectedDocumentType}}
           />
         </div>
