--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -51,7 +51,7 @@
       <:body as |row|>
         <td>
           <Search::ResultCards::Case
-            @sessionDate={{row.attributes.sessionDates}}
+            @date={{row.attributes.sessionDates}}
             @shortTitle={{row.highlight.shortTitle}}
             @title={{row.highlight.title}}
             @caseId={{row.id}}
