--- a/app/components/utils/radio-dropdown-combo-select.hbs
+++ b/app/components/utils/radio-dropdown-combo-select.hbs
@@ -41,6 +41,7 @@
     @searchEnabled={{true}}
     @searchField={{this.dropdownLabelKey}}
     @onChange={{this.select}}
+    @renderInPlace="true"
   as |opt|>
     {{get opt this.dropdownLabelKey}}
   </PowerSelect>
