fix: add decision result filter to decision search

--- a/app/templates/search/decisions.hbs
+++ b/app/templates/search/decisions.hbs
@@ -1,5 +1,11 @@
 {{page-title (t "decisions")}}
 {{#in-element this.customFiltersElement insertBefore=null}}
+  <div class="au-c-card au-o-box au-o-box--small">
+    <Search::DecisionResultFilter
+      @selected={{this.decisionResults}}
+      @onChange={{this.setDecisionResults}}
+    />
+  </div>
 {{/in-element}}
 <div class="au-o-box au-o-box--small">
   {{#if this.model.length}}
