add total results to results header

--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -29,6 +29,7 @@
       @pageSize={{this.size}}
       @pageIdx={{this.page}}
       @nbOfItems={{this.model.length}}
+      @totalNbOfItems={{this.model.meta.count}}
       @searchText={{this.searchText}}
       @searchType={{t "cases"}}
       @onSortChange={{this.selectSort}}
