--- a/app/templates/search/documents.hbs
+++ b/app/templates/search/documents.hbs
@@ -17,6 +17,7 @@
       @pageSize={{this.size}}
       @pageIdx={{this.page}}
       @nbOfItems={{this.model.length}}
+      @totalNbOfItems={{this.model.meta.count}}
       @searchText={{this.searchText}}
       @searchType={{t "documents"}}
       @onSortChange={{this.selectSort}}
