--- a/app/templates/search/news-items.hbs
+++ b/app/templates/search/news-items.hbs
@@ -5,6 +5,7 @@
       @pageSize={{this.size}}
       @pageIdx={{this.page}}
       @nbOfItems={{this.model.length}}
+      @totalNbOfItems={{this.model.meta.count}}
       @searchText={{this.searchText}}
       @searchType={{t "news-items"}}
       @onSortChange={{this.selectSort}}
