--- a/app/components/search/results-header.hbs
+++ b/app/components/search/results-header.hbs
@@ -5,6 +5,8 @@
     <strong
       class="au-u-medium"
     >{{this.fromResultIndex}}-{{this.toResultIndex}}</strong>
+    {{t "of"}}
+    {{@totalNbOfItems}}
     {{t "results-for"}}
     <strong class="au-u-medium">"{{@searchText}}"</strong>
     {{#if @searchType}}
