--- a/app/templates/search/decisions.hbs
+++ b/app/templates/search/decisions.hbs
@@ -7,6 +7,7 @@
       @pageSize={{this.size}}
       @pageIdx={{this.page}}
       @nbOfItems={{this.model.length}}
+      @totalNbOfItems={{this.model.meta.count}}
       @searchText={{this.searchText}}
       @searchType={{t "decisions"}}
       @onSortChange={{this.selectSort}}
