--- a/app/templates/search/all-types.hbs
+++ b/app/templates/search/all-types.hbs
@@ -1,44 +1,11 @@
 {{page-title (t "all-content")}}
 <div class="au-o-box au-o-box--small">
   {{#if this.model.results}}
-    <ul class="au-u-padding-bottom-small">
-      {{#each-in this.model.counts as |name count|}}
-        {{#if count}}
-          <li>
-            {{#if (eq count 1)}}
-              {{t "one-result-found-in"}}
-            {{else}}
-              {{t "n-results-found-in" n=count}}
-            {{/if}}
-            {{#if (eq name "cases")}}
-              <AuLink @route="search.cases">
-                {{t "cases"}}
-              </AuLink>
-            {{/if}}
-            {{#if (eq name "agendaitems")}}
-              <AuLink @route="search.agendaitems">
-                {{t "agendas"}}
-              </AuLink>
-            {{/if}}
-            {{#if (eq name "pieces")}}
-              <AuLink @route="search.documents">
-                {{t "documents"}}
-              </AuLink>
-            {{/if}}
-            {{#if (eq name "decisions")}}
-              <AuLink @route="search.decisions">
-                {{t "decisions"}}
-              </AuLink>
-            {{/if}}
-            {{#if (eq name "news-items")}}
-              <AuLink @route="search.news-items">
-                {{t "news-items"}}
-              </AuLink>
-            {{/if}}
-          </li>
-        {{/if}}
-      {{/each-in}}
-    </ul>
+    <div class="au-u-padding-bottom-small">
+      {{#each @model.counts as |item|}}
+        {{item.count}} <AuLink @route={{item.route}}>{{item.name}}</AuLink>{{#if (has-next item @model.counts)}} - {{/if}}
+      {{/each}}
+    </div>
     <KDataTable
       @cards={{true}}
       @loading={{this.isLoadingModel}}
