--- a/app/styles/auk/_auk-additions.scss
+++ b/app/styles/auk/_auk-additions.scss
@@ -346,3 +346,22 @@ table tr.lt-expanded-row {
   font-style: inherit;
   background: #E4EBF5;
 }
+
+// Bigger font
+// workaround for search legend sign example
+.auk-u-text-size--xlarge {
+  font-size: 2.5rem !important;
+}
+
+// Bigger container
+// workaround for search legend popover having a max-width of 45rem 
+.auk-u-max-width-xxlarge {
+  max-width: 65rem;
+}
+
+// Workaround for popover exiting view window on small display for search legend
+@media screen and (max-width: 780px) {
+  .auk-u-max-width-xxlarge.ember-popover {
+    transform: translate3d(10px, 64px, 0px) !important;
+  }
+}
