KAS-3952 Adjust rdfa-editor set-up to facilitate major update of package

--- a/app/components/web-components/vl-rdfa-editor.hbs
+++ b/app/components/web-components/vl-rdfa-editor.hbs
@@ -1,23 +1,37 @@
 <div ...attributes>
   {{#if this.browserIsSupported}}
-    <Rdfa::RdfaEditor
-      @schema={{this.schema}}
-      @widgets={{this.widgets}}
-      @plugins={{this.plugins}}
-      @rdfaEditorInit={{@handleRdfaEditorInit}}
-      @editorOptions={{hash
-        showToggleRdfaAnnotations=null
-        showInsertButton=null
-        showRdfa=null
-        showRdfaHighlight=null
-        showRdfaHover=null
-      }}
-      @toolbarOptions={{hash
-        showTextStyleButtons="true"
-        showListButtons="true"
-        showIndentButtons="true"
-      }}
-    />
+    <EditorContainer>
+      <:top>
+        <Toolbar as |Tb|>
+          <Tb.Group>
+            <Plugins::History::Undo @controller={{this.controller}}/>
+            <Plugins::History::Redo @controller={{this.controller}}/>
+          </Tb.Group>
+          <Tb.Group>
+            <Plugins::TextStyle::Bold @controller={{this.controller}}/>
+            <Plugins::TextStyle::Italic @controller={{this.controller}}/>
+            <Plugins::TextStyle::Strikethrough @controller={{this.controller}}/>
+            <Plugins::TextStyle::Underline @controller={{this.controller}}/>
+            <Plugins::TextStyle::Subscript @controller={{this.controller}}/>
+            <Plugins::TextStyle::Superscript @controller={{this.controller}}/>
+          </Tb.Group>
+          <Tb.Group>
+            <Plugins::List::Unordered @controller={{this.controller}}/>
+            <Plugins::List::IndentationControls @controller={{this.controller}}/>
+          </Tb.Group>
+          <Tb.Group>
+              <Plugins::Table::TableMenu @controller={{this.controller}}/>
+          </Tb.Group>
+        </Toolbar>
+      </:top>
+      <:default>
+        <Editor
+          @schema={{this.schema}}
+          @rdfaEditorInit={{this.onEditorInit}}
+          @plugins={{this.plugins}}
+        />
+      </:default>
+  </EditorContainer>
   {{else}}
     <Auk::Alert
       @skin="warning"
