Add fallback todecision card if there is no shortTitle

--- a/app/components/search/result-cards/decision.hbs
+++ b/app/components/search/result-cards/decision.hbs
@@ -19,7 +19,7 @@
         <span>
           <SanitizeHtml
             @raw={{true}}
-            @value={{@shortTitle}}
+            @value={{if @shortTitle @shortTitle @title}}
           />
         </span>
       </AuLink>
